--- a/view/senate.html
+++ b/view/senate.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--Bootstrap CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Senate</title>
     <link rel="stylesheet" href="../asset/media/styles/tgif.css">
 
@@ -48,7 +50,9 @@
         uniformed officers, as well as trial of federal officials impeached by the House.
       </p>
 
-      <table>
+
+    <div class="container">
+      <table class="table">
         <thead>
           <tr>
               <th>Name</th>
@@ -58,8 +62,8 @@
               <th>% Votes with Party</th>
           </tr>
       </thead>
-      <tbody>
-          <tr>
+      <tbody id="senateId">
+         <!--<tr>
               <td><a href="https://www.alexander.senate.gov/public">Lamar Alexander</a></td>
               <td>R</td>
               <td>TN</td>
@@ -107,16 +111,15 @@
               <td>CO</td>
               <td>5</td>
               <td>98</td>
-          </tr>
+          </tr>-->
       </tbody>
+
+      
       </table>
     </div>
     <script src="../scripts/tgif.js"></script>
-    <script type="module">
-   import {fetchJson} from '../scripts/html.js';
-
-   fetchJson()
-
-    </script>
+    <script src="../scripts/html.js"></script>
+    <!--Bootstrap JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
