Feature Project3 with senatelinks

--- a/view/senate.html
+++ b/view/senate.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Senate</title>
@@ -60,62 +62,13 @@
               <th>State</th>
               <th>Years in Office</th>
               <th>% Votes with Party</th>
+              <th>Official web site</th>
           </tr>
-      </thead>
-      <tbody id="senateId">
-         <!--<tr>
-              <td><a href="https://www.alexander.senate.gov/public">Lamar Alexander</a></td>
-              <td>R</td>
-              <td>TN</td>
-              <td>11</td>
-              <td>86</td>
-          </tr>
-          <tr>
-              <td><a href="http://www.ayotte.senate.gov">Kelly Ayotte</a></td>
-              <td>R</td>
-              <td>NH</td>
-              <td>3</td>
-              <td>81</td>
-          </tr>
-          <tr>
-              <td><a href="https://www.baldwin.senate.gov">Tammy Baldwin</a></td>
-              <td>D</td>
-              <td>WI</td>
-              <td>1</td>
-              <td>99</td>
-          </tr>
-          <tr>
-              <td><a href="https://www.barrasso.senate.gov">John Barrasso</a></td>
-              <td>R</td>
-              <td>WY</td>
-              <td>7</td>
-              <td>92</td>
-          </tr>
-          <tr>
-              <td><a href="http://www.baucus.senate.gov">Max Baucus</a></td>
-              <td>D</td>
-              <td>MT</td>
-              <td>35</td>
-              <td>90</td>
-          </tr>
-          <tr>
-              <td><a href="http://www.begich.senate.gov">Mark Begich</a></td>
-              <td>D</td>
-              <td>AK</td>
-              <td>5</td>
-              <td>96</td>
-          </tr>
-          <tr>
-              <td><a href="https://www.bennet.senate.gov">Michael Bennet</a></td>
-              <td>D</td>
-              <td>CO</td>
-              <td>5</td>
-              <td>98</td>
-          </tr>-->
+        </thead>
+      <tbody id="senateId">  
       </tbody>
-
-      
       </table>
+
     </div>
     <script src="../scripts/tgif.js"></script>
     <script src="../scripts/html.js"></script>
