--- a/view/senate.html
+++ b/view/senate.html
@@ -51,8 +51,31 @@
         officials, military officers, regulatory officials, ambassadors, and other federal 
         uniformed officers, as well as trial of federal officials impeached by the House.
       </p>
-
-
+      
+<!--Checkboxes Filter by party-->
+      <div class="form-check form-check-inline">
+        <p>Filter by Party</p>
+        <input class="form-check-input" type="checkbox" id="rep" value="R">
+        <label class="form-check-label" for="inlineCheckbox1">Republican</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="dem" value="D">
+        <label class="form-check-label" for="inlineCheckbox2">Democrat</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="ind" value="I">
+        <label class="form-check-label" for="inlineCheckbox3">Independent</label>
+      </div>
+<!--Filter by states-->
+      <div class="checkk2">
+        <b><p>Filter by States:</p></b>
+      </div>
+            <select id="state_list" class="form-select" aria-label="All states" style="width: 20%;"> 
+              <option selected>All states</option> 
+      
+            </select>
+            </div>
+<!--Table-->
     <div class="container">
       <table class="table">
         <thead>
@@ -71,7 +94,7 @@
 
     </div>
     <script src="../scripts/tgif.js"></script>
-    <script src="../scripts/html.js"></script>
+    <script src="../scripts/senate.js"></script>
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
