--- a/view/home.html
+++ b/view/home.html
@@ -12,10 +12,14 @@
   
   <body>
     <a class="logo" href="./home.html">TGIF</a>
-    <nav>
-      <ul>
-        <li><a class="button" href="./home.html">Home</a></li>
-        <li class="dropdown">
+    <!----navbar normal----->
+    <!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./home.html">Home</a></li>
+        <li class="nav-item dropdown">
+        
           <button class="button dropdown-btn">Congress 113</button>
           <ul class="dropdown-items">
             <li><a href="./senate.html">Senate</a></li>
@@ -37,48 +41,107 @@
           </ul>
         </li>
       </ul>
+    </nav>-->
+
+    <!---------navbar bootstrap begin------------>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+       
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+      
+    <!-------dropdown  congress113----->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                 Congress113
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="./members.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./house.html">House</a></li>
+                </ul>
+              </li>
+              
+    <!-------dropdown  attendance----->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+               attendance
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="./senate-attendance.html">Senate</a></li>
+                <li><a class="dropdown-item" href="./house-attendance.html">House</a></li>
+              </ul>
+            </li>
+    <!-----------Loyalty------->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                loyalty
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="./senate-loyalty.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./house-loyalty.html">House</a></li>
+                </ul>
+              </li>
+              
+          </ul>
+          
+        </div>
+      </div>
     </nav>
 
-    <div>
-      <div style="display:inline-block; padding:1em; width:60%">
-        <h2>About Us</h2>
-        <p>
+    <!---------bootstrap containers---------->
+    <div class="container1">
+      <div class="row">
+        <div class="col-8" style="display:inline-block; padding:1em; width:60%">
+          <h2>About Us</h2>
+          <p>
           Openness, accountability, and honesty define government transparency. 
           In a free society, transparency is government's obligation to share 
           information with citizens. It is at the heart of how citizens hold their 
           public officials accountable. Here at TGIF we believe that government 
           should be transparent.
-        </p>
-        <p>
+          </p>
+          <p>
           Governments exist to serve the people. Information on how officials 
           conduct the public business and spend taxpayer money must be readily 
           available and easily understood. This transparency allows good and 
           just governance.  Transparency promotes accountability and provides 
           information for citizens about what their Government is doing.
-        </p>
+          </p>
 
-        <p>
+          <p>
           We also believe that government should be participatory. Public 
           engagement enhances the Government's effectiveness and improves the 
           quality of its decisions. Knowledge is widely dispersed in society, 
           and public officials benefit from having access to that dispersed 
           knowledge. We invite you to use our site to become actively engaged 
           in American government.
-        </p>
+          </p>
 
-        <p>
+          <p>
           TGIF works to disclose information in forms that the public can 
           readily find and use. We solicit public feedback to identify information 
           of greatest use to the public.
-        </p>
-      </div>
+          </p>
+        </div>
 
-      <div style="display:inline-block; width:30%; text-align: center;">
+      <div class="col-12" style="display:inline-block; width:30%; text-align: center;">
         <img src="../asset/media/img/tgif-home-image.png">
+      </div>
+      </div>
+      </div>
+    
+
+      <div class="footercontainer">
+        <div class="col" style="background-color: rgb(215, 210, 210);">
+          <p>2016 TGIF | All Rights Reserved</p>
+        </div>
       </div>
 
   	</div>
-    <script src="../scripts/tgif.js"></script>
+
     <script type="module" src="../scripts/html.js"></script>
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
