--- a/view/members.html
+++ b/view/members.html
@@ -63,7 +63,7 @@
         <label class="form-check-label" for="inlineCheckbox2">Democrat</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="ind" value="I">
+        <input class="form-check-input" type="checkbox" id="ind" value="ID">
         <label class="form-check-label" for="inlineCheckbox3">Independent</label>
       </div>
 <!--Filter by states-->
@@ -71,7 +71,7 @@
         <b><p>Filter by States:</p></b>
       </div>
             <select id="state_list" class="form-select" aria-label="All states" style="width: 20%;"> 
-              <option selected>All states</option> 
+              <option selected>ALL</option> 
       
             </select>
             </div>
