--- a/view/home.html
+++ b/view/home.html
@@ -12,37 +12,7 @@
   
   <body>
     <a class="logo" href="./home.html">TGIF</a>
-    <!----navbar normal----->
-    <!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./home.html">Home</a></li>
-        <li class="nav-item dropdown">
-        
-          <button class="button dropdown-btn">Congress 113</button>
-          <ul class="dropdown-items">
-            <li><a href="./senate.html">Senate</a></li>
-            <li><a href="./house.html">House</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <button class="button dropdown-btn">Attendance</button>
-          <ul class="dropdown-items">
-            <li><a href="./senate-attendance.html">Senate</a></li>
-            <li><a href="./house-attendance.html">House</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <button class="button dropdown-btn">Loyalty</button>
-          <ul class="dropdown-items">
-            <li><a href="./senate-loyalty.html">Senate</a></li>
-            <li><a href="./house-loyalty.html">House</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>-->
-
+    
     <!---------navbar bootstrap begin------------>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -133,7 +103,7 @@
       </div>
       </div>
     
-
+    <!--bootstrap footer-->
       <div class="footercontainer">
         <div class="col" style="background-color: rgb(215, 210, 210);">
           <p>2016 TGIF | All Rights Reserved</p>
