--- a/view/house.html
+++ b/view/house.html
@@ -12,38 +12,101 @@
   
   <body>
     <a class="logo" href="./home.html">TGIF</a>
-    <nav>
-      <ul>
-        <li><a class="button" href="./home.html">Home</a></li>
-        <li class="dropdown">
-          <button class="button dropdown-btn">Congress 113</button>
-          <ul class="dropdown-items">
-            <li><a href="./senate.html">Senate</a></li>
-            <li><a href="./house.html">House</a></li>
+    <!---------navbar bootstrap begin------------>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+       
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+      
+    <!-------dropdown  congress113----->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                 Congress113
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="./members.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./house.html">House</a></li>
+                </ul>
+              </li>
+              
+    <!-------dropdown  attendance----->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+               attendance
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="./senate-attendance.html">Senate</a></li>
+                <li><a class="dropdown-item" href="./house-attendance.html">House</a></li>
+              </ul>
+            </li>
+
+    <!-----------Loyalty------->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                loyalty
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="./senate-loyalty.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./house-loyalty.html">House</a></li>
+                </ul>
+              </li>
+              
           </ul>
-        </li>
-        <li class="dropdown">
-          <button class="button dropdown-btn">Attendance</button>
-          <ul class="dropdown-items">
-            <li><a href="./senate-attendance.html">Senate</a></li>
-            <li><a href="./house-attendance.html">House</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <button class="button dropdown-btn">Loyalty</button>
-          <ul class="dropdown-items">
-            <li><a href="./senate-loyalty.html">Senate</a></li>
-            <li><a href="./house-loyalty.html">House</a></li>
-          </ul>
-        </li>
-      </ul>
+          
+        </div>
+      </div>
     </nav>
 
     <div>   
       <h1>Congressmen</h1>
       <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
       <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
-     	  <table>
+     	 
+      <!--Checkboxes Filter by party-->
+      <div class="form-check form-check-inline">
+        <p>Filter by Party</p>
+        <input class="form-check-input" type="checkbox" id="rep" value="R">
+        <label class="form-check-label" for="inlineCheckbox1">Republican</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="dem" value="D">
+        <label class="form-check-label" for="inlineCheckbox2">Democrat</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="ind" value="ID">
+        <label class="form-check-label" for="inlineCheckbox3">Independent</label>
+      </div>
+<!--Filter by states-->
+      <div class="checkk2">
+        <b><p>Filter by States:</p></b>
+      </div>
+            <select id="state_list" class="form-select" aria-label="All states" style="width: 20%;"> 
+              <option selected>ALL</option> 
+      
+            </select>
+            </div>
+<!--Table-->
+    <div class="container">
+      <table class="table">
+        <thead>
+          <tr>
+              <th>Name</th>
+              <th>Party</th>
+              <th>State</th>
+              <th>Years in Office</th>
+              <th>% Votes with Party</th>
+          </tr>
+        </thead>
+      <tbody id="senateId">  
+      </tbody>
+      </table>
+      
+<!--bootstrap footer-->
+      <!---<table>
           <thead>
             <tr>
                 <th>Name</th>
@@ -105,8 +168,16 @@
             </tr>
         </tbody>
       </table>
-	  </div>
-    <script src="../scripts/tgif.js"></script>
+	  </div>-->
+
+<!--bootstrap footer-->
+    <div class="footercontainer">
+      <div class="col" style="background-color: rgb(215, 210, 210);">
+        <p>2016 TGIF | All Rights Reserved</p>
+      </div>
+    </div>
+
+    <script src="../scripts/house.js"></script>
 <!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
