--- a/view/members.html
+++ b/view/members.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
             </li>
     <!-------dropdown  congress113----->
               <li class="nav-item dropdown">
@@ -68,30 +68,36 @@
         officials, military officers, regulatory officials, ambassadors, and other federal 
         uniformed officers, as well as trial of federal officials impeached by the House.
       </p>
-      
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col">Filter by Party
 <!--Checkboxes Filter by party-->
-      <div class="form-check form-check-inline">
-        <p>Filter by Party</p>
-        <input class="form-check-input" type="checkbox" id="rep" value="R">
-        <label class="form-check-label" for="inlineCheckbox1">Republican</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="dem" value="D">
-        <label class="form-check-label" for="inlineCheckbox2">Democrat</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="ind" value="ID">
-        <label class="form-check-label" for="inlineCheckbox3">Independent</label>
-      </div>
+        <div class="form-check form-check-inline"> 
+          <input class="form-check-input" type="checkbox" id="rep" value="R">
+          <label class="form-check-label" for="inlineCheckbox1">Republican</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="dem" value="D">
+          <label class="form-check-label" for="inlineCheckbox2">Democrat</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="ind" value="ID">
+          <label class="form-check-label" for="inlineCheckbox3">Independent</label>
+        </div>
+        </div>
+        
 <!--Filter by states-->
-      <div class="checkk2">
-        <b><p>Filter by States:</p></b>
-      </div>
+      <div class="col-md-auto">Filter by States</div>
+           <div class="col col-lg-1">
             <select id="state_list" class="form-select" aria-label="All states" style="width: 20%;"> 
               <option selected>ALL</option> 
-      
             </select>
-            </div>
+        </div>
+      </div>
+    </div>
+    
 <!--Table-->
     <div class="container">
       <table class="table">
