--- a/view/attendance-house.html
+++ b/view/attendance-house.html
@@ -28,8 +28,8 @@
                  Congress113
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="./members.html">Senate</a></li>
-                  <li><a class="dropdown-item" href="./house.html">House</a></li>
+                  <li><a class="dropdown-item" href="./congress-senate.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./congress-house.html">House</a></li>
                 </ul>
               </li>
               
@@ -39,8 +39,8 @@
                attendance
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="./senate-attendance.html">Senate</a></li>
-                <li><a class="dropdown-item" href="./house-attendance.html">House</a></li>
+                <li><a class="dropdown-item" href="./attendance-senate.html">Senate</a></li>
+                <li><a class="dropdown-item" href="./attendance-house.html">House</a></li>
               </ul>
             </li>
     <!-----------Loyalty------->
@@ -49,8 +49,8 @@
                 loyalty
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="./senate-loyalty.html">Senate</a></li>
-                  <li><a class="dropdown-item" href="./house-loyalty.html">House</a></li>
+                  <li><a class="dropdown-item" href="./loyalty-senate.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./loyalty-house.html">House</a></li>
                 </ul>
               </li>
               
@@ -60,28 +60,32 @@
       </div>
     </nav>
 
+<!--creating container1-->
+    <div class="container1">
+       <div class="row">
+        <div class="col">
 
-    <div>
-      <h1>Attendance</h1>
+        <h1>Attendance</h1>
 
-      <p>
+        <p>
         
         The Constitution specifies that a majority of members constitutes a quorum 
         to do business in each house. Representatives and senators rarely force the 
         presence of a quorum by demanding quorum calls; thus, in most cases, debates 
         continue even if a majority is not present.
-      </p>
+        </p>
 
-      <p>The Senate uses roll-call votes; a clerk calls out the names of all the 
+        <p>The Senate uses roll-call votes; a clerk calls out the names of all the 
         senators, each senator stating "aye" or "no" when his or her name is announced.
         The House reserves roll-call votes for the most formal matters, as a roll-call
         of all 435 representatives takes quite some time; normally, members vote by
         electronic device. In the case of a tie, the motion in question fails. In the Senate,
         the Vice President may (if present) cast the tiebreaking vote.
-      </p>
-  	  
-      <h2>Senate at a Glance</h2>
+        </p>
+      </div>
 
+  	<div class="col">
+      <h2>House at a Glance</h2>
       <table>
         <thead>
           <tr>
@@ -92,113 +96,124 @@
         </thead>
         <tbody>
           <tr>
-            <td>Republican</td>
+            <td>Republicans</td>
             <td>--</td>
             <td>--</td>
           </tr>
           <tr>
-            <td>Democrat</td>
+            <td>Democrats</td>
             <td>--</td>
             <td>--</td>
           </tr>
           <tr>
-            <td>Independent</td>
+            <td>Independents</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+          <tr>
+            <td>Total</td>
             <td>--</td>
             <td>--</td>
           </tr>
         </tbody>
       </table>
-
-      <h2>Least Engaged (Bottom 10% Attendance)</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Number of Missed Votes</th>
-            <th>% Missed</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <h2>Most Engaged (Top 10% Attendance)</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Number of Missed Votes</th>
-            <th>% Missed</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-        </tbody>
-      </table>
+      </div>
+      </div>
+      
+<!--creating container2-->
+    <div class="row">
+      <div class="col">
+        <h2>Least Engaged (Bottom 10% Attendance)</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Number of Missed Votes</th>
+              <th>% Missed</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+           </tr>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col">
+        <h2>Most Engaged (Top 10% Attendance)</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Number of Missed Votes</th>
+              <th>% Missed</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+            <tr>
+              <td>--</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 <!--bootstrap footer-->
 <div class="footercontainer">
   <div class="col" style="background-color: rgb(215, 210, 210);">
@@ -206,7 +221,6 @@
   </div>
 </div>
 
-  	</div>
     <script src="../scripts/tgif.js"></script>
 <!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
