--- a/view/congress-senate.html
+++ b/view/congress-senate.html
@@ -27,8 +27,8 @@
                  Congress113
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="./members.html">Senate</a></li>
-                  <li><a class="dropdown-item" href="./house.html">House</a></li>
+                  <li><a class="dropdown-item" href="./congress-senate.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./congress-house.html">House</a></li>
                 </ul>
               </li>      
     <!-------dropdown  attendance----->
@@ -37,8 +37,8 @@
                attendance
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="./senate-attendance.html">Senate</a></li>
-                <li><a class="dropdown-item" href="./house-attendance.html">House</a></li>
+                <li><a class="dropdown-item" href="./attendance-senate.html">Senate</a></li>
+                <li><a class="dropdown-item" href="./attendance-house.html">House</a></li>
               </ul>
             </li>
     <!-----------Loyalty------->
@@ -47,8 +47,8 @@
                 loyalty
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="./senate-loyalty.html">Senate</a></li>
-                  <li><a class="dropdown-item" href="./house-loyalty.html">House</a></li>
+                  <li><a class="dropdown-item" href="./loyalty-senate.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./loyalty-house.html">House</a></li>
                 </ul>
               </li>    
           </ul>
