--- a/view/index.html
+++ b/view/index.html
@@ -28,8 +28,8 @@
                    Congress113
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="./members.html">Senate</a></li>
-                    <li><a class="dropdown-item" href="./house.html">House</a></li>
+                    <li><a class="dropdown-item" href="./congress-senate.html">Senate</a></li>
+                    <li><a class="dropdown-item" href="./congress-house.html">House</a></li>
                   </ul>
                 </li>
                 
@@ -39,8 +39,8 @@
                  attendance
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="./senate-attendance.html">Senate</a></li>
-                  <li><a class="dropdown-item" href="./house-attendance.html">House</a></li>
+                  <li><a class="dropdown-item" href="./attendance-senate.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./attendance-house.html">House</a></li>
                 </ul>
               </li>
       <!-----------Loyalty------->
@@ -49,8 +49,8 @@
                   loyalty
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="./senate-loyalty.html">Senate</a></li>
-                    <li><a class="dropdown-item" href="./house-loyalty.html">House</a></li>
+                    <li><a class="dropdown-item" href="./loyalty-senate.html">Senate</a></li>
+                    <li><a class="dropdown-item" href="./loyalty-house.html">House</a></li>
                   </ul>
                 </li>
                 
@@ -108,8 +108,7 @@
 
 
   	</div>
-    <script src="../scripts/tgif.js"></script>
-    <script type="module" src="../scripts/html.js"></script>
+    
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
