--- a/view/loyalty-house.html
+++ b/view/loyalty-house.html
@@ -28,8 +28,8 @@
                  Congress113
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="./members.html">Senate</a></li>
-                  <li><a class="dropdown-item" href="./house.html">House</a></li>
+                  <li><a class="dropdown-item" href="./congress-senate.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./congress-house.html">House</a></li>
                 </ul>
               </li>
               
@@ -39,8 +39,8 @@
                attendance
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="./senate-attendance.html">Senate</a></li>
-                <li><a class="dropdown-item" href="./house-attendance.html">House</a></li>
+                <li><a class="dropdown-item" href="./attendance-senate.html">Senate</a></li>
+                <li><a class="dropdown-item" href="./attendance-house.html">House</a></li>
               </ul>
             </li>
     <!-----------Loyalty------->
@@ -49,8 +49,8 @@
                 loyalty
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="./senate-loyalty.html">Senate</a></li>
-                  <li><a class="dropdown-item" href="./house-loyalty.html">House</a></li>
+                  <li><a class="dropdown-item" href="./loyalty-senate.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./loyalty-house.html">House</a></li>
                 </ul>
               </li>
               
@@ -61,14 +61,19 @@
     </nav>
 
 
-    <div>
+<!--creating container1-->
+
+  <div class="container1">
+    <div class="row">
+      <div class="col">
       <h1>Party Loyalty</h1>
       <p>
         Those who consider themselves to be strong partisans, strong Democrats 
         and strong Republicans respectively, tend to be the most faithful in 
         voting for their party's nominee for office and legislation that backs 
         their party's agenda. </p>
-  	  
+      </div>
+  	  <div class="col">
       <h2>House at a Glance</h2>
       <table>
         <thead>
@@ -96,7 +101,15 @@
           </tr>
         </tbody>
       </table>
+      </div>
+      </div>
+      </div>
 
+<!--creating container2-->
+
+  <div class="container2">
+    <div class="row">
+      <div class="col">
       <h2>Least Loyal (Bottom 10% of Party)</h2>
       <table>
         <thead>
@@ -139,7 +152,9 @@
           </tr>
         </tbody>
       </table>
+      </div>
 
+      <div class="col">
       <h2>Most Loyal (Top 10% of Party)</h2>
       <table>
         <thead>
@@ -188,6 +203,9 @@
         </tbody>
       </table>
   	</div>
+    </div>
+    </div>
+    
     <!--bootstrap footer-->
     <div class="footercontainer">
       <div class="col" style="background-color: rgb(215, 210, 210);">
@@ -195,7 +213,7 @@
       </div>
     </div>
 
-    <script src="../scripts/tgif.js"></script>
+    <script src="../scripts/loyalty-house.js"></script>
 <!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
