--- a/view/loyalty-senate.html
+++ b/view/loyalty-senate.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Attendance</title>
+    <title>Party Loyalty</title>
     <link rel="stylesheet" href="../asset/media/styles/tgif.css">
 
     </head>
@@ -28,8 +28,8 @@
                  Congress113
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="./members.html">Senate</a></li>
-                  <li><a class="dropdown-item" href="./house.html">House</a></li>
+                  <li><a class="dropdown-item" href="./congress-senate.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./congress-house.html">House</a></li>
                 </ul>
               </li>
               
@@ -39,8 +39,8 @@
                attendance
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="./senate-attendance.html">Senate</a></li>
-                <li><a class="dropdown-item" href="./house-attendance.html">House</a></li>
+                <li><a class="dropdown-item" href="./attendance-senate.html">Senate</a></li>
+                <li><a class="dropdown-item" href="./attendance-house.html">House</a></li>
               </ul>
             </li>
     <!-----------Loyalty------->
@@ -49,8 +49,8 @@
                 loyalty
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="./senate-loyalty.html">Senate</a></li>
-                  <li><a class="dropdown-item" href="./house-loyalty.html">House</a></li>
+                  <li><a class="dropdown-item" href="./loyalty-senate.html">Senate</a></li>
+                  <li><a class="dropdown-item" href="./loyalty-house.html">House</a></li>
                 </ul>
               </li>
               
@@ -60,28 +60,19 @@
       </div>
     </nav>
 
-
-    <div>
-      <h1>Attendance</h1>
-
+<!--creating container1-->
+  <div class="container1">
+    <div class="row">
+      <div class="col">
+      <h1>Party Loyalty</h1>
       <p>
-        
-        The Constitution specifies that a majority of members constitutes a quorum 
-        to do business in each house. Representatives and senators rarely force the 
-        presence of a quorum by demanding quorum calls; thus, in most cases, debates 
-        continue even if a majority is not present.
-      </p>
-
-      <p>The Senate uses roll-call votes; a clerk calls out the names of all the 
-        senators, each senator stating "aye" or "no" when his or her name is announced.
-        The House reserves roll-call votes for the most formal matters, as a roll-call
-        of all 435 representatives takes quite some time; normally, members vote by
-        electronic device. In the case of a tie, the motion in question fails. In the Senate,
-        the Vice President may (if present) cast the tiebreaking vote.
-      </p>
-  	  
-      <h2>House at a Glance</h2>
-
+        Those who consider themselves to be strong partisans, strong Democrats 
+        and strong Republicans respectively, tend to be the most faithful in 
+        voting for their party's nominee for office and legislation that backs 
+        their party's agenda. </p>
+      </div>
+  	  <div class="col">
+      <h2>Senate at a Glance</h2>
       <table>
         <thead>
           <tr>
@@ -108,14 +99,19 @@
           </tr>
         </tbody>
       </table>
+      </div>
 
-      <h2>Least Engaged (Bottom 10% Attendance)</h2>
+<!--creating container2-->    
+  <div class="container2">
+    <div class="row">
+      <div class="col">
+      <h2>Least Loyal (Bottom 10% of Party)</h2>
       <table>
         <thead>
           <tr>
             <th>Name</th>
-            <th>Number of Missed Votes</th>
-            <th>% Missed</th>
+            <th>Number Party Votes</th>
+            <th>% Party Votes</th>
           </tr>
         </thead>
         <tbody>
@@ -151,14 +147,16 @@
           </tr>
         </tbody>
       </table>
+      </div>
 
-      <h2>Most Engaged (Top 10% Attendance)</h2>
+      <div class="col">
+      <h2>Most Loyal (Top 10% of Party)</h2>
       <table>
         <thead>
           <tr>
             <th>Name</th>
-            <th>Number of Missed Votes</th>
-            <th>% Missed</th>
+            <th>Number Party Votes</th>
+            <th>% Party Votes</th>
           </tr>
         </thead>
         <tbody>
@@ -199,15 +197,19 @@
           </tr>
         </tbody>
       </table>
+      </div>
+      </div>
+      </div>
+
 <!--bootstrap footer-->
-<div class="footercontainer">
-  <div class="col" style="background-color: rgb(215, 210, 210);">
-    <p>2016 TGIF | All Rights Reserved</p>
-  </div>
-</div>
+      <div class="footercontainer">
+        <div class="col" style="background-color: rgb(215, 210, 210);">
+          <p>2016 TGIF | All Rights Reserved</p>
+        </div>
+      </div>
 
   	</div>
-    <script src="../scripts/tgif.js"></script>
+    <script src="../scripts/loyalty-senate.js"></script>
 <!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
