feature TGIF with loyalty tables

--- a/view/attendance-house.html
+++ b/view/attendance-house.html
@@ -94,27 +94,7 @@
             <th>% Voted with Party</th>
           </tr>
         </thead>
-        <tbody >
-          <tr>
-            <td>Republicans</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>Democrats</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>Independents</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>Total</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
+        <tbody id="tbodyContentTable3">
         </tbody>
       </table>
       </div>
