--- a/view/loyalty-senate.html
+++ b/view/loyalty-senate.html
@@ -81,22 +81,7 @@
             <th>% Voted with Prty</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>Republican</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>Democrat</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>Independent</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
+        <tbody id="tbodyContentTable3">
         </tbody>
       </table>
       </div>
@@ -114,37 +99,7 @@
             <th>% Party Votes</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
+        <tbody id="leastLoyal">
         </tbody>
       </table>
       </div>
@@ -159,42 +114,7 @@
             <th>% Party Votes</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
+        <tbody id="mostLoyal">
         </tbody>
       </table>
       </div>
