--- a/view/loyalty-house.html
+++ b/view/loyalty-house.html
@@ -83,22 +83,7 @@
             <th>% Voted with Prty</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>Republican</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>Democrat</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>Independent</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
+        <tbody id="tbodyContentTable3">
         </tbody>
       </table>
       </div>
@@ -119,37 +104,7 @@
             <th>% Party Votes</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
+        <tbody id="leastLoyal">
         </tbody>
       </table>
       </div>
@@ -164,42 +119,7 @@
             <th>% Party Votes</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
+        <tbody id="mostLoyal">
         </tbody>
       </table>
   	</div>
